# ai-precheck

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  check_server.py  compare_reports.py  debug_compliance.py  docker-compose.yml  init_dirs.py  install_deps.py  logs raiway  pyproject.toml  requirements.txt  seed_data.py  test_checklist.txt
.agent/rules/: code_integrity.md
.agent/workflows/: context.md
app/: main.py
app/api/compliance/: router.py
app/api/v1/: auth.py  compliance_router.py  policies_router.py  rate_limiter.py  widget_router.py
app/api/widget/: router.py
app/core/: config.py
app/infrastructure/: database.py
app/modules/compliance/: engine.py  parser.py  schemas.py
app/modules/policies/: generator.py  models.py  schemas.py  service.py
app/services/crawler/: sanitizer.py  service.py
app/services/llm/: client.py  factory.py  gemini_client.py  mock_client.py  openai_client.py
app/services/pdf/: service.py
app/services/pdf/templates/: compliance_report.html
app/services/report/: docx_service.py
app/static/js/: widget.js
app/templates/: index.html
tests/: test_flow.py
